--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#d8a608</color>
     <color name="colorPrimaryLight">#ffd74b</color>
     <color name="colorPrimaryDark">#a27800</color>
-    <color name="colorAccent">#cccccc</color>
+    <color name="colorSecondary">#cccccc</color>
     <color name="colorAccentLight">#ffffff</color>
     <color name="colorAccentDark">#9b9b9b</color>
     <color name="primaryTextColor">#f2f2f2</color>
     <color name="secondaryTextColor">#4d4d4d</color>
+    <color name="white">#f2f2f2</color>
+
+    <color name="colorBackground">#f2f2f2</color>
 </resources>
