--- a/app/src/main/res/layout/landing_fragment.xml
+++ b/app/src/main/res/layout/landing_fragment.xml
@@ -19,13 +19,15 @@
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/background_splash" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView_logo"
-            android:layout_width="247dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:src="@drawable/logo_napoleon"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -34,7 +36,7 @@
             app:layout_constraintWidth_percent="0.6" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_registro"
+            android:id="@+id/button_register"
             style="@style/AppPrimaryButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -54,7 +56,7 @@
             app:layout_constraintBottom_toTopOf="@+id/button_seleccion_idioma"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/button_registro"
+            app:layout_constraintTop_toBottomOf="@+id/button_register"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <com.google.android.material.button.MaterialButton
