--- a/app/src/main/res/layout/language_selection_fragment.xml
+++ b/app/src/main/res/layout/language_selection_fragment.xml
@@ -22,7 +22,7 @@
 
             <TextView
                 android:id="@+id/textView_titulo"
-                style="@style/TextViewTitle"
+                style="@style/TextViewSecondaryTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_language_selection"
