--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,6 +13,8 @@
         <action
             android:id="@+id/action_splashFragment_to_landingFragment"
             app:destination="@id/landingFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
             app:popUpTo="@+id/splashFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -20,14 +22,26 @@
         android:id="@+id/landingFragment"
         android:name="com.naposystems.pepito.ui.landing.LandingFragment"
         android:label="landing_fragment"
-        tools:layout="@layout/landing_fragment" >
+        tools:layout="@layout/landing_fragment">
         <action
             android:id="@+id/action_landingFragment_to_languageSelectionDialog"
             app:destination="@id/languageSelectionDialog" />
+        <action
+            android:id="@+id/action_landingFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
 
     <dialog
         android:id="@+id/languageSelectionDialog"
         android:name="com.naposystems.pepito.ui.languageSelection.LanguageSelectionFragment"
         android:label="language_selection_dialog" />
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.naposystems.pepito.ui.register.RegisterFragment"
+        android:label="Registro"
+        tools:layout="@layout/register_fragment" />
 </navigation>
