--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorAccentDark">#9b9b9b</color>
     <color name="primaryTextColor">#f2f2f2</color>
     <color name="secondaryTextColor">#4d4d4d</color>
+    <color name="linkTextColor">#29ABE2</color>
     <color name="white">#f2f2f2</color>
 
     <color name="colorBackground">#f2f2f2</color>
