--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,10 +33,31 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="TextViewTitle">
+    <style name="TextViewPrimaryTitle">
+        <item name="android:textSize">@dimen/title_text_size</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="TextViewSecondaryTitle">
         <item name="android:textSize">@dimen/title_text_size</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BodyTextView">
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
+    </style>
+
+    <style name="SmallBodyTextView">
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
+    </style>
+
+    <style name="SmallLinkBodyTextView">
+        <item name="android:textSize">@dimen/small_text_size</item>
+        <item name="android:textColor">@color/linkTextColor</item>
     </style>
 
 </resources>
