--- a/app/src/main/res/layout/landing_fragment.xml
+++ b/app/src/main/res/layout/landing_fragment.xml
@@ -10,92 +10,103 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         tools:context=".ui.landing.LandingFragment">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <include layout="@layout/background_landing" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="centerCrop"
+            android:background="@drawable/bg_container_landing"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/background_splash" />
+            app:layout_constraintTop_toTopOf="@+id/guideline6">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imageView_logo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/logo_napoleon"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="@+id/guideline4"
-            app:layout_constraintWidth_percent="0.6" />
+            <TextView
+                android:id="@+id/textView2"
+                style="@style/TextViewSecondaryTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/welcome"
+                app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_register"
-            style="@style/AppPrimaryButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/label_register"
-            app:layout_constraintBottom_toTopOf="@+id/button_recuperacion_cuenta"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
-            app:layout_constraintVertical_chainStyle="packed" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_register"
+                style="@style/AppPrimaryButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/label_create_account"
+                app:layout_constraintBottom_toTopOf="@+id/button_recovery_account_cuenta"
+                app:layout_constraintEnd_toEndOf="@+id/button_recovery_account_cuenta"
+                app:layout_constraintStart_toStartOf="@+id/button_recovery_account_cuenta"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_recuperacion_cuenta"
-            style="@style/AppPrimaryButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/label_account_recovery"
-            app:layout_constraintBottom_toTopOf="@+id/button_seleccion_idioma"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/button_register"
-            app:layout_constraintVertical_chainStyle="packed" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_recovery_account_cuenta"
+                style="@style/AppOutlinedPrimaryButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="@dimen/large_padding"
+                android:paddingEnd="@dimen/large_padding"
+                android:text="@string/label_recover_account"
+                app:layout_constraintWidth_percent="0.8"
+                app:layout_constraintBottom_toTopOf="@+id/button_seleccion_idioma"
+                app:layout_constraintEnd_toStartOf="@id/guideline2"
+                app:layout_constraintStart_toStartOf="@id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/button_register" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_seleccion_idioma"
-            style="@style/AppSecondaryButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/label_language_selection"
-            app:layout_constraintBottom_toBottomOf="@id/guideline3"
-            app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="@+id/guideline" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_seleccion_idioma"
+                style="@style/AppPrimaryButtonText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layoutDirection="rtl"
+                android:text="@string/label_language_selection"
+                app:icon="@drawable/ic_arrow_right_primary_24dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline4"
+                app:layout_constraintEnd_toEndOf="@+id/button_recovery_account_cuenta"
+                app:layout_constraintStart_toStartOf="@+id/button_recovery_account_cuenta" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="16dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="16dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.10" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="16dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="16dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_end="16dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
+            android:id="@+id/guideline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_end="16dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.55" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
