--- a/app/src/main/res/layout/splash_fragment.xml
+++ b/app/src/main/res/layout/splash_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashFragment">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/imageView_background"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,7 +15,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/background_splash" />
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/splash" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="0dp"
@@ -28,8 +30,8 @@
         app:srcCompat="@drawable/logo_napoleon" />
 
     <TextView
-        style="@style/SmallBodyTextView"
         android:id="@+id/textView"
+        style="@style/SmallBodyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/normal_margin"
