--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,11 @@
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="normal_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
+    <dimen name="large_padding">20dp</dimen>
     <dimen name="normal_padding">16dp</dimen>
     <dimen name="small_padding">8dp</dimen>
     <dimen name="minor_padding">4dp</dimen>
     <dimen name="normal_margin">16dp</dimen>
     <dimen name="small_margin">8dp</dimen>
+    <dimen name="elevation">4dp</dimen>
 </resources>
