--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,9 +28,17 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="AppOutlinedPrimaryButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="strokeColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="AppPrimaryButtonText" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="TextViewPrimaryTitle">
@@ -58,6 +66,11 @@
     <style name="SmallLinkBodyTextView">
         <item name="android:textSize">@dimen/small_text_size</item>
         <item name="android:textColor">@color/linkTextColor</item>
+    </style>
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_up</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_down</item>
     </style>
 
 </resources>
