--- a/app/src/main/res/layout/chat_drawer_header.xml
+++ b/app/src/main/res/layout/chat_drawer_header.xml
@@ -8,7 +8,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container_header"
         android:layout_width="0dp"
-        android:layout_height="160dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,49 +18,64 @@
             android:id="@+id/imageView_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:alpha="0.25"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bg_drawer_header_8" />
+            tools:src="@tools:sample/backgrounds/scenic" />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_black_gradient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- IMAGEVIEW AVATAR -->
         <ImageView
             android:id="@+id/imageView_profile_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/ic_spanish_flag"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="@dimen/normal_margin"
+            android:background="@drawable/bg_profile_avatar"
+            android:elevation="8dp"
+            app:layout_constraintBottom_toTopOf="@id/textView_user_name"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideline_start"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:src="@drawable/ic_default_avatar" />
 
+        <!-- TEXTVIEW NAME -->
         <TextView
             android:id="@+id/textView_user_name"
-            style="@style/TextViewSecondaryTitle"
+            style="@style/TextViewSecondaryTitle.White"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/normal_margin"
+            android:layout_marginEnd="@dimen/normal_margin"
             android:ellipsize="end"
             android:lines="1"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@id/textView_user_nickname"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/imageView_profile_image"
-            app:layout_constraintTop_toTopOf="@id/imageView_profile_image"
+            app:layout_constraintStart_toStartOf="@id/guideline_start"
+            app:layout_constraintTop_toBottomOf="@id/imageView_profile_image"
             tools:text="Giussep Ricardo Cachaya" />
 
+        <!-- TEXTVIEW NICKNAME -->
         <TextView
             android:id="@+id/textView_user_nickname"
-            style="@style/BodyTextView"
-            android:layout_width="0dp"
+            style="@style/BodyTextView.White"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
-            app:layout_constraintBottom_toBottomOf="@id/imageView_profile_image"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/textView_user_name"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@id/textView_user_name"
             tools:text="\@giusseprc7" />
@@ -88,7 +104,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/container_header" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -107,5 +123,5 @@
         android:background="@color/separator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
