--- a/app/src/main/res/layout/validate_nickname_fragment.xml
+++ b/app/src/main/res/layout/validate_nickname_fragment.xml
@@ -71,7 +71,7 @@
                             android:digits="@string/only_letters_and_numbers"
                             android:inputType="text"
                             android:lines="1"
-                            android:maxLength="20"
+                            android:maxLength="@dimen/max_length_nickname"
                             android:maxLines="1"
                             android:singleLine="true"
                             android:text="@={viewModel.nickName}" />
@@ -97,7 +97,7 @@
                             android:layout_height="wrap_content"
                             android:inputType="textCapWords"
                             android:lines="1"
-                            android:maxLength="50"
+                            android:maxLength="@dimen/max_length_display_name"
                             android:maxLines="1"
                             android:singleLine="true"
                             android:text="@={viewModel.displayName}" />
