--- a/app/src/main/res/menu/main_chat_menu.xml
+++ b/app/src/main/res/menu/main_chat_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
+    <!--item
         android:id="@+id/profile"
         android:icon="@drawable/ic_person_black"
-        android:title="@string/profile" />
+        android:title="@string/profile" />-->
 
     <item
         android:id="@+id/security_settings"
