--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="normal_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
-    <dimen name="large_padding">20dp</dimen>
+    <dimen name="normal_button_text_size">16sp</dimen>
+    <dimen name="large_padding">24dp</dimen>
     <dimen name="normal_padding">16dp</dimen>
     <dimen name="small_padding">8dp</dimen>
     <dimen name="minor_padding">4dp</dimen>
@@ -15,4 +16,7 @@
     <dimen name="height_editText_enter_code">70dp</dimen>
     <dimen name="text_size_editText_enter_code">24sp</dimen>
     <item name="width_app_button" format="float" type="dimen">0.8</item>
+    <item name="alpha_drawer_header" format="float" type="dimen">0.25</item>
+    <item name="max_length_nickname" format="integer" type="dimen">20</item>
+    <item name="max_length_display_name" format="integer" type="dimen">50</item>
 </resources>
