--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
 
     <style name="AppPrimaryButtonText" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@color/colorPrimary</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/normal_button_text_size</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -53,6 +53,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TextViewSecondaryTitle.White">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="BodyTextView">
         <item name="android:textSize">@dimen/normal_text_size</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
@@ -60,6 +64,10 @@
 
     <style name="BodyTextView.Bold">
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="BodyTextView.White">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="SmallBodyTextView">
