--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -12,4 +12,5 @@
     <string name="label_share_a_state">Compartilhar um estado</string>
     <string name="label_edit_photo">Editar foto</string>
     <string name="label_edit_cover">Editar banner</string>
+    <string name="text_edit">Editar</string>
 </resources>
