--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -21,4 +21,5 @@
     <string name="label_share_a_state">Comparte un estado</string>
     <string name="label_edit_photo">Editar foto</string>
     <string name="label_edit_cover">Editar banner</string>
+    <string name="text_edit">Editar</string>
 </resources>
