--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
         <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">false</item>
+        <item name="layout_constraintWidth_percent">@dimen/width_app_button</item>
     </style>
 
     <style name="AppSecondaryButton" parent="Widget.MaterialComponents.Button">
@@ -152,6 +153,17 @@
         <item name="android:background">@android:color/transparent</item>
         <item name="android:maxLength">@dimen/max_length_display_name</item>
         <item name="android:padding">0dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="AccessPinEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:digits">@string/only_numbers</item>
+        <item name="android:inputType">numberPassword</item>
+        <item name="android:lines">1</item>
+        <item name="android:maxLength">4</item>
+        <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
     </style>
 
