--- a/app/src/main/res/values-en/general.xml
+++ b/app/src/main/res/values-en/general.xml
@@ -13,4 +13,5 @@
     <string name="label_edit_photo">Edit photo</string>
     <string name="label_edit_cover">Edit banner</string>
     <string name="text_edit">Edit</string>
+    <string name="text_share">Share</string>
 </resources>
