--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -13,4 +13,5 @@
     <string name="label_edit_photo">Editar foto</string>
     <string name="label_edit_cover">Editar banner</string>
     <string name="text_edit">Editar</string>
+    <string name="text_share">Compartilhe</string>
 </resources>
