--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -13,4 +13,5 @@
     <string name="label_edit_photo">Modifier la photo</string>
     <string name="label_edit_cover">Modifier la bannière</string>
     <string name="text_edit">Modifier</string>
+    <string name="text_share">Partager</string>
 </resources>
