--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -13,4 +13,5 @@
     <string name="label_edit_photo">Modifica foto</string>
     <string name="label_edit_cover">Modifica banner</string>
     <string name="text_edit">Modifica</string>
+    <string name="text_share">Quota</string>
 </resources>
