--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,15 @@
         <item name="layout_constraintWidth_percent">@dimen/width_app_button</item>
     </style>
 
+    <style name="AppPrimaryButton.Icon" parent="Widget.MaterialComponents.Button.Icon">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="layout_constraintWidth_percent">@dimen/width_app_button</item>
+        <item name="iconTint">@color/white</item>
+    </style>
+
     <style name="AppSecondaryButton" parent="Widget.MaterialComponents.Button">
         <item name="android:backgroundTint">@color/colorSecondary</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
