--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -23,4 +23,5 @@
     <string name="label_edit_cover">Editar banner</string>
     <string name="text_edit">Editar</string>
     <string name="text_share">Compartir</string>
+    <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Secret Chat</string>
 </resources>
