--- a/app/src/main/res/values-it/security_settings.xml
+++ b/app/src/main/res/values-it/security_settings.xml
@@ -6,4 +6,5 @@
     <string name="text_edit_access_pin">Modifica pin di accesso</string>
     <string name="text_time_to_request_access_pin">Tempo per la richiesta del pin di accesso</string>
     <string name="text_account_recovery_information">Informazioni sul recupero dell\'account</string>
+    <string name="text_allow_download_attachments">Consenti download allegati inviati</string>
 </resources>
