--- a/app/src/main/res/values-de/security_settings.xml
+++ b/app/src/main/res/values-de/security_settings.xml
@@ -6,4 +6,5 @@
     <string name="text_edit_access_pin">Zugriffs-PIN bearbeiten</string>
     <string name="text_time_to_request_access_pin">Zeit für die PIN-Zugriffsanfrage</string>
     <string name="text_account_recovery_information">Informationen zur Kontowiederherstellung</string>
+    <string name="text_allow_download_attachments">Zulassen, dass Download-Anhänge gesendet werden</string>
 </resources>
