--- a/app/src/main/res/values-pt/security_settings.xml
+++ b/app/src/main/res/values-pt/security_settings.xml
@@ -6,4 +6,5 @@
     <string name="text_edit_access_pin">Editar pino de acesso</string>
     <string name="text_time_to_request_access_pin">Hora da solicitação do pino de acesso</string>
     <string name="text_account_recovery_information">Informações de recuperação de conta</string>
+    <string name="text_allow_download_attachments">Permitir anexos de download enviados</string>
 </resources>
