--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,8 @@
     <color name="colorBackground">#f2f2f2</color>
     <color name="colorSecondaryBackground">#d8a608</color>
     <color name="buttonTint">#d8a608</color>
+    <color name="trackColor">#4Dd8a608</color>
+    <color name="disabledTrackColor">@color/colorSecondaryDark</color>
+    <color name="disabledThumbColor">@color/white</color>
+    <color name="sectionColor">#E6E6E6</color>
 </resources>
