--- a/app/src/main/res/values/security_settings.xml
+++ b/app/src/main/res/values/security_settings.xml
@@ -6,4 +6,5 @@
     <string name="text_edit_access_pin">Editar pin de acceso</string>
     <string name="text_time_to_request_access_pin">Tiempo para solicitud de pin de acceso</string>
     <string name="text_account_recovery_information">Información recuperación de cuenta</string>
+    <string name="text_allow_download_attachments">Permitir descargar adjuntos enviados</string>
 </resources>
