--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -14,4 +14,6 @@
     <string name="label_edit_cover">Banner bearbeiten</string>
     <string name="text_edit">Bearbeiten</string>
     <string name="text_share">Teilen</string>
+    <string name="text_search">Suche</string>
+    <string name="text_add_contact">Kontakt hinzufügen</string>
 </resources>
