--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -14,4 +14,6 @@
     <string name="label_edit_cover">Modifica banner</string>
     <string name="text_edit">Modifica</string>
     <string name="text_share">Quota</string>
+    <string name="text_search">Cerca</string>
+    <string name="text_add_contact">Aggiungi contatto</string>
 </resources>
