--- a/app/src/main/res/values-en/general.xml
+++ b/app/src/main/res/values-en/general.xml
@@ -14,4 +14,6 @@
     <string name="label_edit_cover">Edit banner</string>
     <string name="text_edit">Edit</string>
     <string name="text_share">Share</string>
+    <string name="text_search">Search</string>
+    <string name="text_add_contact">Add contact</string>
 </resources>
