--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -14,4 +14,6 @@
     <string name="label_edit_cover">Modifier la bannière</string>
     <string name="text_edit">Modifier</string>
     <string name="text_share">Partager</string>
+    <string name="text_search">Cherchez</string>
+    <string name="text_add_contact">Ajouter un contact</string>
 </resources>
