--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,4 +22,5 @@
     <color name="disabledTrackColor">#4D505564</color>
     <color name="disabledThumbColor">@color/colorSecondaryDark</color>
     <color name="sectionColor">#282828</color>
+    <color name="fabIconColor">#121212</color>
 </resources>
