--- a/app/src/main/res/values-en/appearance_settings.xml
+++ b/app/src/main/res/values-en/appearance_settings.xml
@@ -8,4 +8,7 @@
     <string name="text_name_and_nickname">Name and nickname</string>
     <string name="text_only_name">Only name</string>
     <string name="text_only_nickname">Only nickname</string>
+    <string name="text_conversation_background">Conversation background</string>
+    <string name="text_updated_successfully">The conversation background has been changed successfully</string>
+    <string name="text_error_updating_conversation_background">An error occurred while changing the conversation background, please try again</string>
 </resources>
