--- a/app/src/main/res/values-fr/appearance_settings.xml
+++ b/app/src/main/res/values-fr/appearance_settings.xml
@@ -8,4 +8,7 @@
     <string name="text_name_and_nickname">Nom et pseudo</string>
     <string name="text_only_name">Nom seulement</string>
     <string name="text_only_nickname">Pseudo seulement</string>
+    <string name="text_conversation_background">Contexte de la conversation</string>
+    <string name="text_updated_successfully">L\'arrière-plan de la conversation a été modifié avec succès</string>
+    <string name="text_error_updating_conversation_background">Une erreur s\'est produite lors de la modification de l\'arrière-plan de la conversation, veuillez réessayer</string>
 </resources>
