--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="disabledTrackColor">@color/colorSecondaryDark</color>
     <color name="disabledThumbColor">@color/white</color>
     <color name="sectionColor">#E6E6E6</color>
+    <color name="backgroundSpinnerColor">#f2f2f2</color>
 </resources>
