NS-542, Avance No 1

--- a/app/src/main/res/layout/contacts_item.xml
+++ b/app/src/main/res/layout/contacts_item.xml
@@ -38,6 +38,7 @@
             android:clickable="true"
             android:focusable="true"
             android:foreground="?attr/selectableItemBackground"
+            android:onClick="@{() -> clickListener.onClick(contact)}"
             android:paddingStart="@dimen/normal_padding"
             android:paddingTop="@dimen/normal_padding"
             android:paddingBottom="@dimen/normal_padding"
@@ -82,7 +83,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/normal_margin"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:onClick="@{() -> clickListener.onClick(contact)}"
+                android:onClick="@{() -> clickListener.onMoreClick(contact)}"
                 android:tint="@color/colorSecondaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
