--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="?android:attr/actionBarSize"
                     android:background="@color/colorPrimary"
                     android:elevation="@dimen/elevation"
                     app:layout_constraintEnd_toEndOf="parent"
