--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -144,7 +144,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -220,7 +220,7 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <dialog
         android:id="@+id/imageSelectorBottomSheetFragment"
@@ -263,10 +263,27 @@
         android:id="@+id/contactsFragment"
         android:name="com.naposystems.pepito.ui.contacts.ContactsFragment"
         android:label="@string/text_my_contacts"
-        tools:layout="@layout/contacts_fragment"/>
+        tools:layout="@layout/contacts_fragment">
+        <action
+            android:id="@+id/action_contactsFragment_to_conversationFragment"
+            app:destination="@id/conversationFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/contactUsFragment"
         android:name="com.naposystems.pepito.ui.contactUs.ContactUsFragment"
         android:label="@string/text_contact_us"
         tools:layout="@layout/contact_us_fragment" />
+    <fragment
+        android:id="@+id/conversationFragment"
+        android:name="com.naposystems.pepito.ui.conversation.ConversationFragment"
+        android:label=""
+        tools:layout="@layout/conversation_fragment">
+        <argument
+            android:name="contact"
+            app:argType="com.naposystems.pepito.entity.Contact" />
+    </fragment>
 </navigation>
