--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="normal_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
+    <dimen name="minor_text_size">12sp</dimen>
     <dimen name="normal_button_text_size">16sp</dimen>
     <dimen name="x_large_padding">32dp</dimen>
     <dimen name="large_padding">24dp</dimen>
