--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -95,6 +95,24 @@
         <item name="android:textColor">@color/colorError</item>
     </style>
 
+    <style name="SmallBodyTextView.White" parent="SmallBodyTextView">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SmallBodyTextView.WhiteBold" parent="SmallBodyTextView">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MinorBodyTextView">
+        <item name="android:textSize">@dimen/minor_text_size</item>
+        <item name="android:textColor">@color/secondaryTextColor</item>
+    </style>
+
+    <style name="MinorBodyTextView.White" parent="MinorBodyTextView">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_in_up</item>
         <item name="android:windowExitAnimation">@anim/slide_out_down</item>
