--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -56,7 +56,7 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/minor_margin"
+            android:layout_marginTop="@dimen/x_small_margin"
             android:ellipsize="end"
             android:lines="1"
             android:text="@{chat.nickname}"
@@ -71,7 +71,7 @@
             style="@style/BodyTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/minor_margin"
+            android:layout_marginTop="@dimen/x_small_margin"
             android:ellipsize="end"
             android:lines="1"
             android:text="@{chat.message}"
