--- a/app/src/main/res/layout/splash_fragment.xml
+++ b/app/src/main/res/layout/splash_fragment.xml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/small_margin"
-        android:paddingBottom="@dimen/minor_padding"
+        android:paddingBottom="@dimen/x_small_padding"
         android:text="@string/power_by"
         app:layout_constraintBottom_toBottomOf="@id/imageView_logo_horizontal"
         app:layout_constraintEnd_toStartOf="@+id/imageView_logo_horizontal"
