--- a/app/src/main/res/drawable/bg_bottom_sheet_indicator.xml
+++ b/app/src/main/res/drawable/bg_bottom_sheet_indicator.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/colorSecondary" />
-    <corners android:radius="@dimen/minor_padding" />
+    <corners android:radius="@dimen/x_small_padding" />
 </shape>
