--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -138,7 +138,7 @@
                         android:layout_marginEnd="@dimen/normal_margin"
                         android:layout_marginBottom="@dimen/normal_margin"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:padding="@dimen/minor_padding"
+                        android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
                         android:tint="@color/colorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -187,7 +187,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@android:color/transparent"
-                        android:padding="@dimen/minor_padding"
+                        android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -263,7 +263,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackgroundBorderless"
-                        android:padding="@dimen/minor_padding"
+                        android:padding="@dimen/x_small_padding"
                         android:scaleType="center"
                         android:tint="@color/colorSecondaryDark"
                         app:layout_constraintBottom_toBottomOf="parent"
