--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,14 +9,19 @@
     <dimen name="large_padding">24dp</dimen>
     <dimen name="normal_padding">16dp</dimen>
     <dimen name="small_padding">8dp</dimen>
-    <dimen name="minor_padding">4dp</dimen>
-    <dimen name="minor_margin">4dp</dimen>
+    <dimen name="x_small_padding">4dp</dimen>
+    <dimen name="x_small_margin">4dp</dimen>
     <dimen name="small_margin">8dp</dimen>
     <dimen name="normal_margin">16dp</dimen>
     <dimen name="large_margin">32dp</dimen>
     <dimen name="elevation">4dp</dimen>
     <dimen name="height_editText_enter_code">70dp</dimen>
     <dimen name="text_size_editText_enter_code">24sp</dimen>
+    <dimen name="conversation_fab_size">48dp</dimen>
+    <dimen name="normal_radius">16dp</dimen>
+    <dimen name="small_radius">8dp</dimen>
+    <dimen name="minor_radius">4dp</dimen>
+    <dimen name="x_x_small_padding">2dp</dimen>
     <item name="width_app_button" format="float" type="dimen">0.8</item>
     <item name="alpha_drawer_header" format="float" type="dimen">0.25</item>
     <item name="max_length_nickname" format="integer" type="dimen">20</item>
