--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,6 +81,14 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="MyMessageTextView" parent="BodyTextView">
+        <item name="android:textColor">@color/colorTextMyMessage</item>
+    </style>
+
+    <style name="IncomingMessageTextView" parent="BodyTextView">
+        <item name="android:textColor">@color/colorTextIncomingMessage</item>
+    </style>
+
     <style name="SmallBodyTextView">
         <item name="android:textSize">@dimen/small_text_size</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
@@ -97,6 +105,14 @@
 
     <style name="SmallBodyTextView.White" parent="SmallBodyTextView">
         <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="MyMessageDateTextView" parent="SmallBodyTextView">
+        <item name="android:textColor">@color/colorTextMyMessage</item>
+    </style>
+
+    <style name="IncomingMessageDateTextView" parent="SmallBodyTextView">
+        <item name="android:textColor">@color/colorTextIncomingMessage</item>
     </style>
 
     <style name="SmallBodyTextView.WhiteBold" parent="SmallBodyTextView">
@@ -196,6 +212,13 @@
         <item name="android:maxLength">4</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ConversationToolbarIcon">
+        <item name="android:layout_width">24dp</item>
+        <item name="android:layout_height">24dp</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:scaleType">fitCenter</item>
     </style>
 
 </resources>
