--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -16,4 +16,5 @@
     <string name="text_share">Teilen</string>
     <string name="text_search">Suche</string>
     <string name="text_add_contact">Kontakt hinzufügen</string>
+    <string name="text_finish">Fertig</string>
 </resources>
