--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -16,4 +16,5 @@
     <string name="text_share">Partager</string>
     <string name="text_search">Cherchez</string>
     <string name="text_add_contact">Ajouter un contact</string>
+    <string name="text_finish">Terminer</string>
 </resources>
