--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -16,4 +16,5 @@
     <string name="text_share">Quota</string>
     <string name="text_search">Cerca</string>
     <string name="text_add_contact">Aggiungi contatto</string>
+    <string name="text_finish">Finalizza</string>
 </resources>
