--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -16,4 +16,5 @@
     <string name="text_share">Compartilhe</string>
     <string name="text_search">Pesquisar</string>
     <string name="text_add_contact">Adicionar contato</string>
+    <string name="text_finish">Concluir</string>
 </resources>
