--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -92,6 +92,7 @@
                     app:layout_constraintEnd_toEndOf="@id/guideline_end"
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
                     app:layout_constraintTop_toBottomOf="@+id/textInputLayout_message"
+                    app:layout_constraintWidth_percent="@dimen/width_app_button"
                     app:layout_constraintVertical_bias="1.0">
 
                     <com.google.android.material.button.MaterialButton
