--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -26,4 +26,5 @@
     <string name="text_napoleon_secret_chat" translatable="false">NapoleoN Secret Chat</string>
     <string name="text_search">Buscar</string>
     <string name="text_add_contact">Agregar contacto</string>
+    <string name="text_finish">Finalizar</string>
 </resources>
